# project-som

./: .gitignore  GLIEDERUNG.md  Notizen.md  README.md  SOMC.html  doc-index.html  index-frames.html  index.html  main.tex  mainzsv.tex  mini_SOMC.html
CODE/: SOMC.hs
bsom/: bsom.cabal
bsom/src/: AlphaFunction.hs  BSOM.hs  FieldInterpretation.hs  ListVector.hs  RadiusFunction.hs
src/: SOMC.hs
src/Test2L/: prots.txt
src/Test2Q/: prots.txt
src/Test2R/: prots.txt
