name:                bsom
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/bsom#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BSOM
  build-depends:       base >= 4.7 && < 5, containers >=0.5.6.2,
                       deepseq >=1.4 && < 1.5, random >=1.1 && <1.2
  default-language:    Haskell2010

test-suite bsom-test
  type:                detailed-0.9
  test-module:         Spec
  hs-source-dirs:      test
  build-depends:       base
                     , bsom
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bsom
